[gd_scene load_steps=6 format=2]

[ext_resource path="res://levels/Scripts/urso.gd" type="Script" id=1]
[ext_resource path="res://assets/Sprite Pack 5/7 - Grizzly/Idle_(48 x 32).png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.5, 10.5 )

[sub_resource type="GDScript" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 70.75, 24 )

[node name="urso" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="textura" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 2.5 )
shape = SubResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2( 0, 5 )
script = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2( 27.75, 6 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2( 27.75, 6 )
shape = SubResource( 2 )

[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
